# SuperShort-be

./: Cargo.toml  Dockerfile  start.bat  start.sh
src/: main.rs
src/routes/: mod.rs  redirect.rs  shorten.rs
src/structs/: deserialize.rs  link.rs  mod.rs  serialize.rs
