[package]
name = "supershort"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
axum-server = "0.7.2"
# HTTP server runtime
tokio = { version = "1.37", features = ["full"] }
# Request/response body and runtime server glue
hyper = "1.1"
hyper-util = { version = "0.1", features = ["tokio"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Database (SQLite)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
# UUID generation
uuid = { version = "1", features = ["v4"] }
# Env file support
dotenvy = "0.15"
# Tower compatibility layer (otional, but recommended for Axum)
tower = "0.4"
