[package]
name = "supershort"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.8"
axum-server = "0.7.2"
# HTTP server runtime
tokio = { version = "1.37", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
# Database (SQLite)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
# UUID generation
uuid = { version = "1", features = ["v4"] }
# Env file support
dotenvy = "0.15"
tower-http = { version = "0.6.6", features = ["cors"] }
http = "1.3.1"
